# spork-editor

./: CMakeLists.txt
src/: main.c
